# dace-query

./: .gitignore  .readthedocs.yaml  README-developers.md  README-development.md  README.md  pyproject.toml
dace_query/astrometry/: astrometry.py
dace_query/catalog/: catalog.py
dace_query/cheops/: cheops.py
dace_query/imaging/: imaging.py
dace_query/monitoring/: monitoring.py
dace_query/photometry/: photometry.py
dace_query/population/: population.py
dace_query/spectroscopy/: spectroscopy.py
dace_query/sun/: sun.py
dace_query/tess/: tess.py
debug-api/: api-type.py  astrometry-query.py  atmospheric-query.py  atom-query.py  catalog-query.py  cheops-download-attitude.py  cheops-download.py  cheops-query.py  dace-debug.py  duplicate-log.py  exoplanet-query.py  imaging-query.py  lossy-query.py  monitoring-query.py  open-data-api.py  photometry-query.py  population-query.py  spectroscopy-download.py  spectroscopy-filter.py  spectroscopy-query.py  spectroscopy-sorted.py  sun-query.py  target-query.py  tess-query.py  toml-reading.py
docs/source/: changelogs.rst  conf.py  dace_introduction.rst  dace_query.astrometry.rst  dace_query.atmosphericSpectroscopy.rst  dace_query.catalog.rst  dace_query.cheops.rst  dace_query.exoplanet.rst  dace_query.imaging.rst  dace_query.lossy.rst  dace_query.monitoring.rst  dace_query.opacity.rst  dace_query.opendata.rst  dace_query.photometry.rst  dace_query.population.rst  dace_query.rst  dace_query.spectroscopy.rst  dace_query.sun.rst  dace_query.target.rst  dace_query.tess.rst  index.rst  modules.rst  (+3 more)
tests/: conftest.py
(+18 files in other folders)
