[build-system]
requires = ["setuptools>=61.0", "sphinx>=5.3.0", "pytest>=7.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dace-query"
version = "1.2.0"
description = "The dace-query lets easily query DACE and access public and private data using a simple utility tool."
authors = [{ name = "dace-team", email = "dace-support@unige.ch" }]
maintainers = [{ name = "dace-team", email = "dace-support@unige.ch" }]
readme = "README.rst"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.23.4",
  "astropy>=5.1.1",
  "pandas>=2.0.0",
  "requests>=2.28.1",
]

[project.urls]
Homepage = "https://dace.unige.ch/"
Repository = "https://gitlab.unige.ch/dace-public/dace-api"
Issues = "https://gitlab.unige.ch/dace-public/dace-api/-/issues"
Documentation = "https://dace-query.readthedocs.io/en/latest/"